@@ -267,7 +267,10 @@ function sqsession_unregister ($name) {
     sqsession_is_active();
 
     unset($_SESSION[$name]);
-    session_unregister($name);
+
+    // starts throwing warnings in PHP 5.3.0 and is
+    // removed in PHP 6 and is redundant anyway
+    //session_unregister($name);
 }
 
 /**
